@@ -1,3 +1,7 @@
+2007-02-10  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/mio_tls.cc: more info on rejected certificates
+
 2007-02-09  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_tls.c(c): working on virtual host support
